refactor: polish