@@ -30,18 +30,27 @@ import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
 import com.questhelper.questinfo.QuestHelperQuest;
 import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemOnTileRequirement;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.player.SkillRequirement;
 import com.questhelper.requirements.quest.QuestRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.util.Operation;
 import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.QuestState;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
@@ -50,118 +59,101 @@ import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 import net.runelite.api.gameval.VarbitID;
 
-import java.util.*;
-
 public class ShadowOfTheStorm extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement darkItems, silverlight, strangeImplement, blackMushroomInk, pestle, vial, silverBar, silverlightHighlighted, blackMushroomHighlighted,
-		silverlightDyedEquipped, sigilMould, silverlightDyed, strangeImplementHighlighted, sigil, book, bookHighlighted,
-		sigilHighlighted, sigil2;
+	// Required items
+	ItemRequirement silverlight;
+	ItemRequirement darkItems;
+	ItemRequirement silverBar;
 
-	//Items Recommended
-	ItemRequirement combatGear, coinsForCarpet, alKharidTeleport;
+	// Recommended items
+	ItemRequirement combatGear;
+	ItemRequirement coinsForCarpet;
+	ItemRequirement alKharidTeleport;
 
-	Requirement inRuin, inThroneRoom,talkedToGolem, talkedToMatthew, inCircleSpot, sigilNearby, evilDaveMoved, baddenMoved,
-		reenMoved, golemMoved, golemRejected, golemReprogrammed,
-		inSecondCircleSpot;
+	// Mid-quest item requirements
+	ItemRequirement strangeImplement;
+	ItemRequirement blackMushroomInk;
+	ItemRequirement pestle;
+	ItemRequirement vial;
+	ItemRequirement silverlightHighlighted;
+	ItemRequirement blackMushroomHighlighted;
+	ItemRequirement silverlightDyedEquipped;
+	ItemRequirement sigilMould;
+	ItemRequirement silverlightDyed;
+	ItemRequirement strangeImplementHighlighted;
+	ItemRequirement sigil;
+	ItemRequirement book;
+	ItemRequirement bookHighlighted;
+	ItemRequirement sigilHighlighted;
+	ItemRequirement sigil2;
 
-	DetailedQuestStep talkToReen, talkToBadden, pickMushroom, dyeSilverlight, goIntoRuin, pickUpStrangeImplement, talkToEvilDave, enterPortal,
-		talkToDenath, talkToJennifer, talkToMatthew, smeltSigil, talkToGolem, readBook, enterRuinAfterBook, enterPortalAfterBook,
-		talkToMatthewAfterBook, standInCircle, pickUpSigil, leavePortal, tellDaveToReturn, pickUpImplementAfterRitual,
-		goUpToBadden, talkToBaddenAfterRitual, talkToReenAfterRitual, talkToTheGolemAfterRitual, useImplementOnGolem, pickUpSigil2,
-		talkToGolemAfterReprogramming, enterRuinAfterRecruiting, enterPortalAfterRecruiting, talkToMatthewToStartFight, killDemon,
-		standInCircleAgain, enterRuinNoDark, enterRuinForRitual, enterPortalForRitual, enterRuinForDave, enterPortalForFight,
-		enterRuinForFight, unequipDarklight;
+	// Zones
+	Zone ruin;
+	Zone throneRoom;
+	Zone circleSpot;
+	Zone secondCircleSpot;
 
-	DetailedOwnerStep searchKiln;
+	// Miscellaneous requirements
+	ZoneRequirement inRuin;
+	ZoneRequirement inThroneRoom;
+	VarbitRequirement talkedToGolem;
+	VarbitRequirement talkedToMatthew;
+	ZoneRequirement inCircleSpot;
+	ItemOnTileRequirement sigilNearby;
+	VarbitRequirement evilDaveMoved;
+	VarbitRequirement baddenMoved;
+	VarbitRequirement reenMoved;
+	VarbitRequirement golemMoved;
+	VarbitRequirement golemRejected;
+	VarbitRequirement golemReprogrammed;
+	ZoneRequirement inSecondCircleSpot;
 
-	IncantationStep readIncantation, incantRitual;
-
-	//Zones
-	Zone ruin, throneRoom, circleSpot, secondCircleSpot;
-
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		Map<Integer, QuestStep> steps = new HashMap<>();
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-
-		steps.put(0, talkToReen);
-		steps.put(10, talkToBadden);
-
-		ConditionalStep infiltrateCult = new ConditionalStep(this, pickMushroom);
-		infiltrateCult.addStep(new Conditions(silverlightDyed, strangeImplement, inRuin), talkToEvilDave);
-		infiltrateCult.addStep(new Conditions(silverlightDyed, inRuin), pickUpStrangeImplement);
-		infiltrateCult.addStep(silverlightDyed, goIntoRuin);
-		infiltrateCult.addStep(blackMushroomHighlighted, dyeSilverlight);
-		steps.put(20, infiltrateCult);
-
-		ConditionalStep goTalkToDenath = new ConditionalStep(this, enterRuinNoDark);
-		goTalkToDenath.addStep(inThroneRoom, talkToDenath);
-		goTalkToDenath.addStep(inRuin, enterPortal);
-		steps.put(30, goTalkToDenath);
-
-		ConditionalStep completeSubTasks = new ConditionalStep(this, enterRuinNoDark);
-		completeSubTasks.addStep(new Conditions(book, sigil, inThroneRoom), talkToMatthewAfterBook);
-		completeSubTasks.addStep(new Conditions(book, sigil, inRuin), enterPortalAfterBook);
-		completeSubTasks.addStep(new Conditions(book, sigil), enterRuinAfterBook);
-		completeSubTasks.addStep(new Conditions(talkedToGolem, sigil), searchKiln);
-		completeSubTasks.addStep(new Conditions(talkedToMatthew, sigil), talkToGolem);
-		completeSubTasks.addStep(new Conditions(talkedToMatthew, sigilMould), smeltSigil);
-		completeSubTasks.addStep(new Conditions(inThroneRoom, sigilMould), talkToMatthew);
-		completeSubTasks.addStep(inThroneRoom, talkToJennifer);
-		completeSubTasks.addStep(inRuin, enterPortal);
-		steps.put(40, completeSubTasks);
-		steps.put(50, completeSubTasks);
-		steps.put(60, completeSubTasks);
-
-		ConditionalStep startRitual = new ConditionalStep(this, enterRuinForRitual);
-		startRitual.addStep(inThroneRoom, talkToMatthewAfterBook);
-		startRitual.addStep(inRuin, enterPortalForRitual);
-		steps.put(70, startRitual);
-
-		ConditionalStep performRitual = new ConditionalStep(this, enterRuinForRitual);
-		performRitual.addStep(inCircleSpot, readIncantation);
-		performRitual.addStep(inThroneRoom, standInCircle);
-		performRitual.addStep(inRuin, enterPortalForRitual);
-		steps.put(80, performRitual);
-
-		ConditionalStep prepareForSecondRitual = new ConditionalStep(this, enterRuinForDave);
-		prepareForSecondRitual.addStep(sigilNearby, pickUpSigil);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved, golemMoved, inThroneRoom), talkToMatthewToStartFight);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved, golemMoved, inRuin), enterPortalAfterRecruiting);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved, golemMoved), enterRuinAfterRecruiting);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved, golemReprogrammed), talkToGolemAfterReprogramming);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved, golemRejected), useImplementOnGolem);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved, reenMoved), talkToTheGolemAfterRitual);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, baddenMoved), talkToReenAfterRitual);
-		prepareForSecondRitual.addStep(new Conditions(strangeImplement, evilDaveMoved, inRuin), goUpToBadden);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved, inRuin), pickUpImplementAfterRitual);
-		prepareForSecondRitual.addStep(new Conditions(evilDaveMoved), talkToBaddenAfterRitual);
-		prepareForSecondRitual.addStep(inRuin, tellDaveToReturn);
-		prepareForSecondRitual.addStep(inThroneRoom, leavePortal);
-
-		steps.put(90, prepareForSecondRitual);
-		steps.put(100, prepareForSecondRitual);
-
-		ConditionalStep summonAgrith = new ConditionalStep(this, enterRuinAfterRecruiting);
-		summonAgrith.addStep(inSecondCircleSpot, incantRitual);
-		summonAgrith.addStep(inThroneRoom, standInCircleAgain);
-		summonAgrith.addStep(inRuin, enterPortalAfterRecruiting);
-		steps.put(110, summonAgrith);
-
-		ConditionalStep defeatAgrith = new ConditionalStep(this, enterRuinForFight);
-		defeatAgrith.addStep(inThroneRoom, killDemon);
-		defeatAgrith.addStep(inRuin, enterPortalForFight);
-		steps.put(120, defeatAgrith);
-
-		steps.put(124, unequipDarklight);
-
-		return steps;
-	}
+	// Steps
+	NpcStep talkToReen;
+	NpcStep talkToBadden;
+	ObjectStep pickMushroom;
+	DetailedQuestStep dyeSilverlight;
+	ObjectStep goIntoRuin;
+	DetailedQuestStep pickUpStrangeImplement;
+	NpcStep talkToEvilDave;
+	ObjectStep enterPortal;
+	NpcStep talkToDenath;
+	NpcStep talkToJennifer;
+	NpcStep talkToMatthew;
+	DetailedQuestStep smeltSigil;
+	NpcStep talkToGolem;
+	DetailedQuestStep readBook;
+	ObjectStep enterRuinAfterBook;
+	ObjectStep enterPortalAfterBook;
+	NpcStep talkToMatthewAfterBook;
+	DetailedQuestStep standInCircle;
+	ItemStep pickUpSigil;
+	ObjectStep leavePortal;
+	NpcStep tellDaveToReturn;
+	DetailedQuestStep pickUpImplementAfterRitual;
+	ObjectStep goUpToBadden;
+	NpcStep talkToBaddenAfterRitual;
+	NpcStep talkToReenAfterRitual;
+	NpcStep talkToTheGolemAfterRitual;
+	NpcStep useImplementOnGolem;
+	ItemStep pickUpSigil2;
+	NpcStep talkToGolemAfterReprogramming;
+	ObjectStep enterRuinAfterRecruiting;
+	ObjectStep enterPortalAfterRecruiting;
+	NpcStep talkToMatthewToStartFight;
+	NpcStep killDemon;
+	DetailedQuestStep standInCircleAgain;
+	ObjectStep enterRuinNoDark;
+	ObjectStep enterRuinForRitual;
+	ObjectStep enterPortalForRitual;
+	ObjectStep enterRuinForDave;
+	ObjectStep enterPortalForFight;
+	ObjectStep enterRuinForFight;
+	DetailedQuestStep unequipDarklight;
+	SearchKilns searchKiln;
+	IncantationStep readIncantation;
+	IncantationStep incantRitual;
 
 	@Override
 	protected void setupZones()
@@ -215,10 +207,6 @@ public class ShadowOfTheStorm extends BasicQuestHelper
 		// Recommended
 		alKharidTeleport = new ItemRequirement("Al Kharid Teleport", ItemCollections.AMULET_OF_GLORIES);
 		alKharidTeleport.addAlternates(ItemCollections.RING_OF_DUELINGS);
-	}
-
-	private void setupConditions()
-	{
 		inRuin = new ZoneRequirement(ruin);
 		inThroneRoom = new ZoneRequirement(throneRoom);
 		inCircleSpot = new ZoneRequirement(circleSpot);
@@ -314,39 +302,142 @@ public class ShadowOfTheStorm extends BasicQuestHelper
 	}
 
 	@Override
-	public List<String> getNotes()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		return Arrays.asList("You will need 3 black items for a part of the quest. Potential items would be:",
-			"- Desert shirt/robe dyed with black mushroom ink", "- Black armour", "- Priest gown top/bottom", "- Black wizard hat",
-			"- Dark mystic", "- Ghostly robes", "- Shade robes", "- Black dragonhide", "- Black cape", "- One of the various black holiday event items", "- Graceful outfit (dyed black)");
-	}
+		initializeRequirements();
+		setupSteps();
 
-	@Override
-	public List<String> getCombatRequirements()
-	{
-		return Collections.singletonList("Agrith-Naar (level 100)");
-	}
+		var steps = new HashMap<Integer, QuestStep>();
 
-	@Override
-	public List<ItemRequirement> getItemRequirements()
-	{
-		return Arrays.asList(silverlight, darkItems, silverBar);
-	}
+		steps.put(0, talkToReen);
+		steps.put(10, talkToBadden);
 
-	@Override
-	public List<ItemRequirement> getItemRecommended()
-	{
-		return Arrays.asList(combatGear, coinsForCarpet, alKharidTeleport);
+		var infiltrateCult = new ConditionalStep(this, pickMushroom);
+		infiltrateCult.addStep(and(silverlightDyed, strangeImplement, inRuin), talkToEvilDave);
+		infiltrateCult.addStep(and(silverlightDyed, inRuin), pickUpStrangeImplement);
+		infiltrateCult.addStep(silverlightDyed, goIntoRuin);
+		infiltrateCult.addStep(blackMushroomHighlighted, dyeSilverlight);
+		steps.put(20, infiltrateCult);
+
+		var goTalkToDenath = new ConditionalStep(this, enterRuinNoDark);
+		goTalkToDenath.addStep(inThroneRoom, talkToDenath);
+		goTalkToDenath.addStep(inRuin, enterPortal);
+		steps.put(30, goTalkToDenath);
+
+		var completeSubTasks = new ConditionalStep(this, enterRuinNoDark);
+		completeSubTasks.addStep(and(book, sigil, inThroneRoom), talkToMatthewAfterBook);
+		completeSubTasks.addStep(and(book, sigil, inRuin), enterPortalAfterBook);
+		completeSubTasks.addStep(and(book, sigil), enterRuinAfterBook);
+		completeSubTasks.addStep(and(talkedToGolem, sigil), searchKiln);
+		completeSubTasks.addStep(and(talkedToMatthew, sigil), talkToGolem);
+		completeSubTasks.addStep(and(talkedToMatthew, sigilMould), smeltSigil);
+		completeSubTasks.addStep(and(inThroneRoom, sigilMould), talkToMatthew);
+		completeSubTasks.addStep(inThroneRoom, talkToJennifer);
+		completeSubTasks.addStep(inRuin, enterPortal);
+		steps.put(40, completeSubTasks);
+		steps.put(50, completeSubTasks);
+		steps.put(60, completeSubTasks);
+
+		var startRitual = new ConditionalStep(this, enterRuinForRitual);
+		startRitual.addStep(inThroneRoom, talkToMatthewAfterBook);
+		startRitual.addStep(inRuin, enterPortalForRitual);
+		steps.put(70, startRitual);
+
+		var performRitual = new ConditionalStep(this, enterRuinForRitual);
+		performRitual.addStep(inCircleSpot, readIncantation);
+		performRitual.addStep(inThroneRoom, standInCircle);
+		performRitual.addStep(inRuin, enterPortalForRitual);
+		steps.put(80, performRitual);
+
+		var prepareForSecondRitual = new ConditionalStep(this, enterRuinForDave);
+		prepareForSecondRitual.addStep(sigilNearby, pickUpSigil);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved, golemMoved, inThroneRoom), talkToMatthewToStartFight);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved, golemMoved, inRuin), enterPortalAfterRecruiting);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved, golemMoved), enterRuinAfterRecruiting);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved, golemReprogrammed), talkToGolemAfterReprogramming);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved, golemRejected), useImplementOnGolem);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved, reenMoved), talkToTheGolemAfterRitual);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, baddenMoved), talkToReenAfterRitual);
+		prepareForSecondRitual.addStep(and(strangeImplement, evilDaveMoved, inRuin), goUpToBadden);
+		prepareForSecondRitual.addStep(and(evilDaveMoved, inRuin), pickUpImplementAfterRitual);
+		prepareForSecondRitual.addStep(and(evilDaveMoved), talkToBaddenAfterRitual);
+		prepareForSecondRitual.addStep(inRuin, tellDaveToReturn);
+		prepareForSecondRitual.addStep(inThroneRoom, leavePortal);
+
+		steps.put(90, prepareForSecondRitual);
+		steps.put(100, prepareForSecondRitual);
+
+		var summonAgrith = new ConditionalStep(this, enterRuinAfterRecruiting);
+		summonAgrith.addStep(inSecondCircleSpot, incantRitual);
+		summonAgrith.addStep(inThroneRoom, standInCircleAgain);
+		summonAgrith.addStep(inRuin, enterPortalAfterRecruiting);
+		steps.put(110, summonAgrith);
+
+		var defeatAgrith = new ConditionalStep(this, enterRuinForFight);
+		defeatAgrith.addStep(inThroneRoom, killDemon);
+		defeatAgrith.addStep(inRuin, enterPortalForFight);
+		steps.put(120, defeatAgrith);
+
+		steps.put(124, unequipDarklight);
+
+		return steps;
 	}
 
 	@Override
 	public List<Requirement> getGeneralRequirements()
 	{
-		ArrayList<Requirement> req = new ArrayList<>();
-		req.add(new QuestRequirement(QuestHelperQuest.THE_GOLEM, QuestState.FINISHED));
-		req.add(new QuestRequirement(QuestHelperQuest.DEMON_SLAYER, QuestState.FINISHED));
-		req.add(new SkillRequirement(Skill.CRAFTING, 30, true));
-		return req;
+		return List.of(
+			new QuestRequirement(QuestHelperQuest.THE_GOLEM, QuestState.FINISHED),
+			new QuestRequirement(QuestHelperQuest.DEMON_SLAYER, QuestState.FINISHED),
+			new SkillRequirement(Skill.CRAFTING, 30, true)
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRequirements()
+	{
+		return List.of(
+			silverlight,
+			darkItems,
+			silverBar
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRecommended()
+	{
+		return List.of(
+			combatGear,
+			coinsForCarpet,
+			alKharidTeleport
+		);
+	}
+
+	@Override
+	public List<String> getCombatRequirements()
+	{
+		return List.of(
+			"Agrith-Naar (level 100)"
+		);
+	}
+
+	@Override
+	public List<String> getNotes()
+	{
+		return List.of(
+			"You will need 3 black items for a part of the quest. Potential items would be:",
+			"- Desert shirt/robe dyed with black mushroom ink",
+			"- Black armour",
+			"- Priest gown top/bottom",
+			"- Black wizard hat",
+			"- Dark mystic",
+			"- Ghostly robes",
+			"- Shade robes",
+			"- Black dragonhide",
+			"- Black cape",
+			"- One of the various black holiday event items",
+			"- Graceful outfit (dyed black)"
+		);
 	}
 
 	@Override
@@ -358,21 +449,70 @@ public class ShadowOfTheStorm extends BasicQuestHelper
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Arrays.asList(
-				new ItemReward("10,000 Experience Lamp (Any combat skill except Prayer)", ItemID.THOSF_REWARD_LAMP, 1), //4447 is placeholder for filter
-				new ItemReward("Darklight", ItemID.DARKLIGHT, 1));
+		return List.of(
+			new ItemReward("10,000 Experience Lamp (Any combat skill except Prayer)", ItemID.THOSF_REWARD_LAMP, 1), //4447 is placeholder for filter
+			new ItemReward("Darklight", ItemID.DARKLIGHT, 1)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var sections = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Starting off", Collections.singletonList(talkToReen)));
-		allSteps.add(new PanelDetails("Infiltrate the cult", Arrays.asList(talkToBadden, pickMushroom, dyeSilverlight, goIntoRuin, pickUpStrangeImplement, talkToEvilDave, talkToDenath, talkToJennifer, talkToMatthew), silverlight, darkItems));
-		allSteps.add(new PanelDetails("Uncovering the truth", Arrays.asList(smeltSigil, talkToGolem, searchKiln, readBook, talkToMatthewAfterBook, standInCircle, readIncantation), silverBar, silverlightDyed, combatGear));
-		allSteps.add(new PanelDetails("Defeating Agrith-Naar", Arrays.asList(pickUpSigil, leavePortal, pickUpSigil2, tellDaveToReturn, talkToBaddenAfterRitual, talkToReenAfterRitual, talkToTheGolemAfterRitual, useImplementOnGolem, talkToGolemAfterReprogramming,
-			talkToMatthewToStartFight, standInCircleAgain, incantRitual, killDemon, unequipDarklight), silverlightDyed, combatGear));
-		return allSteps;
+		sections.add(new PanelDetails("Starting off", List.of(
+			talkToReen
+		)));
+
+		sections.add(new PanelDetails("Infiltrate the cult", List.of(
+			talkToBadden,
+			pickMushroom,
+			dyeSilverlight,
+			goIntoRuin,
+			pickUpStrangeImplement,
+			talkToEvilDave,
+			talkToDenath,
+			talkToJennifer,
+			talkToMatthew
+		), List.of(
+			silverlight,
+			darkItems
+		)));
+
+		sections.add(new PanelDetails("Uncovering the truth", List.of(
+			smeltSigil,
+			talkToGolem,
+			searchKiln,
+			readBook,
+			talkToMatthewAfterBook,
+			standInCircle,
+			readIncantation
+		), List.of(
+			silverBar,
+			silverlightDyed,
+			combatGear
+		)));
+
+		sections.add(new PanelDetails("Defeating Agrith-Naar", List.of(
+			pickUpSigil,
+			leavePortal,
+			pickUpSigil2,
+			tellDaveToReturn,
+			talkToBaddenAfterRitual,
+			talkToReenAfterRitual,
+			talkToTheGolemAfterRitual,
+			useImplementOnGolem,
+			talkToGolemAfterReprogramming,
+			talkToMatthewToStartFight,
+			standInCircleAgain,
+			incantRitual,
+			killDemon,
+			unequipDarklight
+		), List.of(
+			silverlightDyed,
+			combatGear
+		)));
+
+		return sections;
 	}
 }
